# polymesh-api-example-yew-wasm-pack

./: Cargo.toml  package-lock.json  package.json  web3.js  webpack.config.js
js/: web3.js
src/: app.rs  lib.rs  web3.rs
src/components/: accounts.rs  backend.rs  blocks.rs  mod.rs  nav.rs  recent_blocks.rs  recent_events.rs
src/pages/: accounts.rs  connecting.rs  explorer.rs  mod.rs  not_found.rs  router.rs  settings.rs
src/providers/: accounts.rs  backend.rs  blocks.rs  mod.rs  settings.rs
static/: index.html
