[package]
name = "polymesh_leptos_example"
version = "0.1.0"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
edition = "2021"
description = "Example of using the Rust polymesh-api with Leptos"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["leptos", "wasm"]
categories = ["gui", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
web-sys = { version = "0.3.4", features = [ 'KeyboardEvent'] }

wasm-bindgen = { version = "=0.2.105" }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
wee_alloc = { version = "0.4.4", optional = true }

leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6" }

gloo-storage = { version = "0.3" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }

hex = "0.4"
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32", features = ["full"] }
polymesh-api = { version = "3.6", features = ["download_metadata"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.32", features = ["rt", "sync"] }
polymesh-api = { version = "3.6", default-features = false, features = ["download_metadata", "polymesh_v7", "wasm", "serde"] }

[profile.release]
strip = true
